--- a/native.html
+++ b/native.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hi Native!</title>
+    <title>Hi Native 0.4!</title>
     <style>
       body {
         margin: 0;
