--- a/native.html
+++ b/native.html
@@ -50,6 +50,18 @@
         margin-top: 10px;
       }
 
+      #copyBtn2 {
+        background-color: #949494;
+        color: rgb(201, 201, 201);
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 16px;
+        cursor: pointer;
+        display: block;
+        margin: 0 auto;
+      }
+
 
       .form+.form {
         margin-top: 20px;
@@ -92,8 +104,9 @@
         <input type="text" id="input-8" placeholder="(选填) 累计" />
         <input type="text" id="input-9" placeholder="(选填) 浩浩今日" />
         <input type="text" id="input-10" placeholder="(选填) 累计" />
-        <button type="submit">复制</button>
-        <button id="copyBtn">无个人业绩复制</button>
+        <button type="submit">带个人业绩</button>
+        <button id="copyBtn">无个人业绩</button>
+        <button id="copyBtn2">下午三点业绩</button>
       </form>
     </div>
 
