Fixed a bug where combineRate does not have toFixed

--- a/native.html
+++ b/native.html
@@ -150,7 +150,7 @@
 <p>今日达成率：${(saleRate * 100).toFixed(2)}%</p>
 <p>销售笔数：${input3Value}</p>
 <p>销售件数：${input4Value}</p>
-<p>串联：${combineRate}</p>
+<p>串联：${combineRate.toFixed(2)}</p>
 <p>销售总件数：${input5Value}</p>
 <p>月销售累计金额：${input6Value}</p>`;
 
