--- a/native.html
+++ b/native.html
@@ -1,251 +1,120 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Hi Native 0.4!</title>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>熙地港native专柜</title>
     <style>
-      body {
-        margin: 0;
-        padding: 0;
-        background-color: #f5eef1;
-      }
-
-      .container {
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .form {
-        width: 300px;
-        background-color: rgba(255, 255, 255, 0.6);
-        padding: 20px;
-        border-radius: 10px;
-        backdrop-filter: blur(5px);
-      }
-
-      input[type="text"] {
-        width: 100%;
-        padding: 10px;
-        margin: 5px 0;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-      }
-
-      button {
-        background-color: #ff93ad;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-        display: block;
-        margin: 0 auto;
-      }
-
-      #copyBtn {
-        margin-top: 10px;
-      }
-
-      #copyBtn2 {
-        background-color: #949494;
-        color: rgb(201, 201, 201);
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        font-size: 16px;
-        cursor: pointer;
-        display: block;
-        margin: 0 auto;
-      }
-
-
-      .form+.form {
-        margin-top: 20px;
-      }
-
-      .container {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .form {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        justify-content: center;
-        align-items: center;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 30px;
+        }
+        input {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+        }
+        button {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+        #output {
+            white-space: pre-wrap;
+            font-size: 14px;
+        }
     </style>
-  </head>
-
-  <body>
-    <div class="container">
-      <form class="form">
-        <h2 style="text-align: center;">无聊产物v0.3</h2>
-        <input type="text" id="input-1" placeholder="今日目标" />
-        <input type="text" id="input-2" placeholder="今日销量" />
-        <input type="text" id="input-3" placeholder="销售笔数" />
-        <input type="text" id="input-4" placeholder="销售件数" />
-        <input type="text" id="input-5" placeholder="销售总件数" />
-        <input type="text" id="input-6" placeholder="月销售金额" />
-        <input type="text" id="input-7" placeholder="(选填) 依凡今日" />
-        <input type="text" id="input-8" placeholder="(选填) 累计" />
-        <input type="text" id="input-9" placeholder="(选填) 浩浩今日" />
-        <input type="text" id="input-10" placeholder="(选填) 累计" />
-        <button type="submit">带个人业绩</button>
-        <button id="copyBtn">无个人业绩</button>
-        <button id="copyBtn2">下午三点业绩</button>
-      </form>
-    </div>
+</head>
+<body>
+    <h1>熙地港native专柜</h1>
+    <input type="number" id="goal" placeholder="今日目标">
+    <input type="number" id="sales" placeholder="今日销量">
+    <input type="number" id="salesCount" placeholder="销售笔数">
+    <input type="number" id="salesItems" placeholder="销售件数">
+    <input type="number" id="totalItems" placeholder="销售总件数">
+    <input type="number" id="monthlySales" placeholder="月销售金额">
+    <input type="number" id="employee1Today" placeholder="依凡今日">
+    <input type="number" id="employee1Total" placeholder="依凡累计">
+    <input type="number" id="employee2Today" placeholder="浩浩今日">
+    <input type="number" id="employee2Total" placeholder="浩浩累计">
+    <input type="number" id="employee3Today" placeholder="世豪今日">
+    <input type="number" id="employee3Total" placeholder="世豪累计">
+    <button onclick="generateOutput()">生成输出</button>
+    <pre id="output"></pre>
 
     <script>
-      // 获取表单元素
-      const form = document.querySelector(".form");
-      const inputs = document.querySelectorAll(".form input");
-      const submitBtn = document.querySelector(".form button");
-      const copyBtn = document.querySelector("#copyBtn");
-
-      copyBtn.addEventListener("click", () => {
-        // 阻止表单默认的提交行为
-        event.preventDefault();
-        // 获取输入框的值
-        const input1Value = inputs[0].value;
-        const input2Value = inputs[1].value;
-        const input3Value = inputs[2].value;
-        const input4Value = inputs[3].value;
-        const input5Value = inputs[4].value;
-        const input6Value = inputs[5].value;
-        const input7Value = inputs[6].value;
-        // 计算销售达成率和串联率
-        const saleRate = input2Value / input1Value;
-        const combineRate = input4Value / input3Value;
-        // 获取当前日期
-        const date = new Date();
-        const month = date.getMonth() + 1;
-        const day = date.getDate();
-        const today = `${month}月${day}日`;
-
-        // 创建新表单元素
-        const newForm = document.createElement("form");
-        newForm.classList.add("form");
-
-        // 创建新结果元素
-        const resultElem = document.createElement("div");
-        resultElem.innerHTML = `<p>熙地港native专柜</p>
-<p>${today}</p>
-<p>今日目标：${input1Value}</p>
-<p>今日销售：${input2Value}</p>
-<p>今日达成率：${(saleRate * 100).toFixed(2)}%</p>
-<p>销售笔数：${input3Value}</p>
-<p>销售件数：${input4Value}</p>
-<p>串联：${combineRate.toFixed(2)}</p>
-<p>销售总件数：${input5Value}</p>
-<p>月销售累计金额：${input6Value}</p>`;
-
-        // 将结果元素添加到新表单元素中
-        newForm.appendChild(resultElem);
-        // 将新表单设置为垂直方向
-        newForm.style.display = "flex";
-        newForm.style.flexDirection = "column";
-        // 在原表单元素下方添加新表单元素
-        form.insertAdjacentElement("afterend", newForm);
-        const resultText = resultElem.textContent;
-        // 创建一个临时文本元素
-        const tempElem = document.createElement("textarea");
-        tempElem.value = resultText;
-        document.body.appendChild(tempElem);
-
-        // 将临时文本元素中的文本复制到剪贴板中
-        tempElem.select();
-        document.execCommand("copy");
-
-        // 在不需要时移除临时元素
-        document.body.removeChild(tempElem);
-
-        // 显示提示信息
-        alert("已复制");
-      });
-      // 与提交按钮单击事件监听器中的代码类似
-
-      // 给提交按钮添加点击事件监听器
-      submitBtn.addEventListener("click", (event) => {
-        // 阻止表单默认的提交行为
-        event.preventDefault();
-        // 获取输入框的值
-        const input1Value = inputs[0].value;
-        const input2Value = inputs[1].value;
-        const input3Value = inputs[2].value;
-        const input4Value = inputs[3].value;
-        const input5Value = inputs[4].value;
-        const input6Value = inputs[5].value;
-        const input7Value = inputs[6].value;
-        const input8Value = inputs[7].value;
-        const input9Value = inputs[8].value;
-        const input10Value = inputs[9].value;
-        // 计算销售达成率和串联率
-        const saleRate = input2Value / input1Value;
-        const combineRate = input4Value / input3Value;
-        // 获取当前日期
-        const date = new Date();
-        const month = date.getMonth() + 1;
-        const day = date.getDate();
-        const today = `${month}月${day}日`;
-
-        // 创建新表单元素
-        const newForm = document.createElement("form");
-        newForm.classList.add("form");
-
-        // 创建新结果元素
-        const resultElem = document.createElement("div");
-        resultElem.innerHTML = `<p>熙地港native专柜</p>
-<p>${today}</p>
-<p>今日目标：${input1Value}</p>
-<p>今日销售：${input2Value}</p>
-<p>今日达成率：${(saleRate * 100).toFixed(2)}%</p>
-<p>销售笔数：${input3Value}</p>
-<p>销售件数：${input4Value}</p>
-<p>串联：${combineRate}</p>
-<p>销售总件数：${input5Value}</p>
-<p>月销售累计金额：${input6Value}</p>
-<p>个人业绩</p>
-<p>依凡：${input7Value} 累计：${input8Value}</p>
-<p>浩浩：${input9Value} 累计：${input10Value}</p>`;
-
-        // 将结果元素添加到新表单元素中
-        newForm.appendChild(resultElem);
-        // 将新表单设置为垂直方向
-        newForm.style.display = "flex";
-        newForm.style.flexDirection = "column";
-        // 在原表单元素下方添加新表单元素
-        form.insertAdjacentElement("afterend", newForm);
-        const resultText = resultElem.textContent;
-        // 创建一个临时文本元素
-        const tempElem = document.createElement("textarea");
-        tempElem.value = resultText;
-        document.body.appendChild(tempElem);
-
-        // 将临时文本元素中的文本复制到剪贴板中
-        tempElem.select();
-        document.execCommand("copy");
-
-        // 在不需要时移除临时元素
-        document.body.removeChild(tempElem);
-
-        // 显示提示信息
-        alert("已复制");
-      });
-    </script>
-  </body>
+      function generateOutput() {
+          const goal = document.getElementById("goal").value;
+          const sales = document.getElementById("sales").value;
+          const salesCount = document.getElementById("salesCount").value;
+          const salesItems = document.getElementById("salesItems").value;
+          const totalItems = document.getElementById("totalItems").value;
+          const monthlySales = document.getElementById("monthlySales").value;
+          const employee1Today = document.getElementById("employee1Today").value;
+          const employee1Total = document.getElementById("employee1Total").value;
+          const employee2Today = document.getElementById("employee2Today").value;
+          const employee2Total = document.getElementById("employee2Total").value;
+          const employee3Today = document.getElementById("employee3Today").value;
+          const employee3Total = document.getElementById("employee3Total").value;
+  
+          const currentDate = new Date();
+          const month = currentDate.getMonth() + 1;
+          const day = currentDate.getDate();
+          const formattedDate = `${month}月${day}日`;
+  
+          const completionRate = ((sales / goal) * 100).toFixed(2);
+          const combineRate = (salesItems / salesCount).toFixed(2);
+          const output = `熙地港native专柜
+${formattedDate}
+今日目标：${goal}
+今日销售：${sales}
+今日达成率：${completionRate}%
+销售笔数：${salesCount}
+销售件数：${salesItems}
+串联：${combineRate}
+销售总件数：${totalItems}
+月销售累计金额：${monthlySales}
+个人业绩
+依凡：${employee1Today} 累计：${employee1Total}
+浩浩：${employee2Today} 累计：${employee2Total}
+世豪：${employee3Today} 累计：${employee3Total}`;
+  
+          document.getElementById("output").textContent = output;
+  
+          // 复制输出文本到剪贴板
+          navigator.clipboard.writeText(output)
+              .then(() => {
+                  alert("输出已复制到剪贴板");
+              })
+              .catch((error) => {
+                  console.error("复制到剪贴板失败:", error);
+              });
+      }
+  </script>
+  
+</body>
 </html>
+
+
+熙地港native专柜
+7月5日
+今日目标：1000
+今日销售：3
+今日达成率：0.30%
+销售笔数：3
+销售件数：3
+串联：1
+销售总件数：5
+月销售累计金额：3
+个人业绩
+依凡：3 累计：5
+浩浩：4 累计：5
+世豪：6 累计：7
