--- a/mc.html
+++ b/mc.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>正在重定向</title>
-    <meta http-equiv="refresh" content="0; url=https://musetransfer.com/s/7r4xom4tp">
+    <meta http-equiv="refresh" content="0; url=https://dl.cloudyshore.top">
   </head>
   <body>
     <h1>正在重定向...</h1>
     <p>页面将在 0 秒后自动跳转到 musetransfer。</p>
     <p>如果页面没有自动跳转，请点击以下链接：</p>
-    <a href="https://musetransfer.com/s/7r4xom4tp">musetransfer</a>
+    <a href="https://dl.cloudyshore.top">musetransfer</a>
   </body>
 </html>
