--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="smallbox" id="sb4">
                 <a href="video.html">
                     <img src="img/camera.svg" class="icon" draggable="false">
-                    视频(还没做呢💔)
+                    空白
                 </a>
             </div>
         </div>
@@ -76,7 +76,7 @@
             let s = Math.floor(f / 60) // 小时
             let ss = s % 24
             let day = Math.floor(s / 24) // 天数
-            return "已经💔<br>" +
+            return "已经♥<br>" +
                 " <font color=#FF5722>" + day + "</font> 天" +
                 " <font color=#FFA000>" + ss + "</font> 小时" +
                 " <font color=#03A9F4>" + ff + "</font> 分钟" +
