update 抄答案 button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 				</button>
 				<div id="result"></div>
 			</div>
+			<div id="dowork" class="button" style="margin: auto;">
+				<button id="doworkButton">
+					<span>对对答案</span>
+					<i class="fa fa-book"></i>
+				</button>
+				<div id="result"></div>
+			</div>
 		</div>
 
 		<div class="overbox">
@@ -49,7 +56,7 @@
 			</div>
 		</div>
 		<div class="button">
-			<a href="https://米米.xyz/sky.html" target="_blank" class="sky-button " style="color: azure;">跳转到Sky (有点丑之后再改)</a>
+			<a href="https://米米.xyz/sky.html" target="_blank" class="sky-button " style="color: azure;">With Haoli</a>
 		</div>
 	</div>
 
