--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="box">
 			<div class="title">硕硕查</div>
 			<div class="input">
-				<label for="name">账号</label>
+				<label for="name">学号</label>
 				<input type="text" name="name" id="name">
 				<span class="spin"></span>
 			</div>
@@ -37,7 +37,7 @@
 			<div class="material-button alt-2">
 				<span class="shape"></span>
 			</div>
-			<div class="title">想要更多...</div>
+			<div class="title">更多查...(硕硕硕硕查)</div>
 			<div class="input">
 				<label for="regname">宿舍号</label>
 				<input type="text" name="regname" id="regname">
