--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>硕硕查</title>
 	<link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style_eduhub.css">
+	<!-- 设置一个icon -->
+	<link rel="icon" href="img/icon.ico">
 </head>
 
 <body>
